--- a/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
+++ b/src/app/feature/calendar/dialogs/card-details-dialog/card-details-dialog.component.css
@@ -80,11 +80,11 @@
   overflow-y: auto;
   scroll-behavior: smooth;
   max-height: calc(100vh - 400px);
+}
 
-  & > div p {
-    font-size: 1rem;
-    line-height: 1.4;
-  }
+.embedded-content {
+  font-size: 1rem;
+  line-height: 1.4;
 }
 
 .xmas-dialog-content::before {
