feat: preserve state when card of the day is opened
When card of the day is opened, its state is preserved so on the next visit it will be shows as opened, so user don't need to click again to open the day.

--- a/src/app/feature/calendar/calendar-grid.component.css
+++ b/src/app/feature/calendar/calendar-grid.component.css
@@ -139,7 +139,7 @@ label:hover .door {
   border-color: #10303c;
 }
 
-:checked + .door {
+:checked:not(.opened) + .door {
   transform: rotateY(-180deg);
 }
 
