--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -9,7 +9,7 @@
   <div
     class="day day-{{ card.day }}"
     (click)="tryToOpenDialog(card)"
-    [class.pulse]="card.canReveal && !card.revealed"
+    [class.pulse]="card.isCardOfDay"
   >
     <label>
       <input
