--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -49,4 +49,8 @@
   </div>
 }
 
-<div class="card space">space</div>
+<div class="card space">
+  <a href="https://twitter.com/i/communities/1726237719762714636">
+    <img src="./../../../assets/content/images/angular-space.png" alt="Angular Space" />
+  </a>
+</div>
