--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -1,8 +1,11 @@
 <div class="title">
+  <img
+    src="./../../../assets/content/images/angular_wordmark_gradient.png"
+    alt="Angular Wordmark Gradient"
+  />
   <h1>
-    <span class="title-1">Angular</span>
-    <span class="title-2">Christmas</span>
-    <span class="title-3">Calendar</span>
+    <span class="title-christmas">Christmas</span>
+    <span class="title-calendar">Calendar</span>
   </h1>
 </div>
 @for (card of cards; track $index) {
