--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -8,6 +8,7 @@
     <span class="title-calendar">Calendar</span>
   </h1>
 </div>
+
 @for (card of cards; track $index) {
   <div
     class="card day-{{ card.day }}"
@@ -56,4 +57,11 @@
   <a href="https://twitter.com/i/communities/1726237719762714636">
     <img src="./../../../assets/content/images/angular-space.png" alt="Angular Space" />
   </a>
+</div>
+
+<div class="year">
+  <span>2</span>
+  <span>0</span>
+  <span>2</span>
+  <span>3</span>
 </div>
