feat: adjust images

--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -1,6 +1,9 @@
 <div class="title">
   <img
-    src="./../../../assets/content/images/angular_wordmark_gradient.png"
+    ngSrc="./../../../assets/content/images/angular_wordmark_gradient.png"
+    width="350"
+    height="109"
+    priority="true"
     alt="Angular Wordmark Gradient"
   />
   <h1>
@@ -55,7 +58,12 @@
 
 <div class="card space">
   <a href="https://twitter.com/i/communities/1726237719762714636">
-    <img src="./../../../assets/content/images/angular-space.png" alt="Angular Space" />
+    <img
+      ngSrc="./../../../assets/content/images/angular-space.png"
+      width="100"
+      height="100"
+      alt="Angular Space"
+    />
   </a>
 </div>
 
