--- a/src/app/feature/calendar/calendar-grid.component.html
+++ b/src/app/feature/calendar/calendar-grid.component.html
@@ -1,13 +1,20 @@
 <div class="title">
+  <img
+    ngSrc="./../../../assets/content/images/angular_wordmark_gradient.png"
+    width="350"
+    height="109"
+    priority="true"
+    alt="Angular Wordmark Gradient"
+  />
   <h1>
-    <span class="title-1">Angular</span>
-    <span class="title-2">Christmas</span>
-    <span class="title-3">Calendar</span>
+    <span class="title-christmas">Christmas</span>
+    <span class="title-calendar">Calendar</span>
   </h1>
 </div>
+
 @for (card of cards; track $index) {
   <div
-    class="day day-{{ card.day }}"
+    class="card day-{{ card.day }}"
     (click)="tryToOpenDialog(card)"
     [shakeWhenDisabled]="!card.canReveal && !card.revealed"
     [class.pulse]="card.canReveal && !card.revealed"
@@ -49,3 +56,21 @@
     </label>
   </div>
 }
+
+<div class="card space">
+  <a href="https://twitter.com/i/communities/1726237719762714636">
+    <img
+      ngSrc="./../../../assets/content/images/angular-space.png"
+      width="100"
+      height="100"
+      alt="Angular Space"
+    />
+  </a>
+</div>
+
+<div class="year">
+  <span>2</span>
+  <span>0</span>
+  <span>2</span>
+  <span>3</span>
+</div>
